# AI-Agents

./: .gitignore  localmodel.py  main2.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
Agents/: Agents.py  UIagent.py  requirement.txt
Agents/CityMind/: README.md  app.py  requirements.txt  styles.css
Agents/CityMind/components/: analytics.py  approval_modal.py  bg_animation.py  chat.py  footer.py  hero.py  news_card.py  sidebar.py  utils.py  weather_card.py
CineSage/: UIcore.py  core.py
CineSage/CineSage2/: core2.py
CineSage/CineSage2/vector store/: DB.py  app.py  create_database.py  main.py
CineSage/CineSage2/vector store/chroma-db/b1b82d97-d200-4445-9c4c-6bc4ea6d435c/: index_metadata.pickle
chatmodels/: UIchatbot.py  chat.py  chatbot.py
embeddingmodels/: embeddings.py  huggingface_embeddings.py
retrievers/: arixv.py  mmr.py  multiquery.py
runnables/: newssummarizer.py  owntool.py  parallelrunnables.py  runnablespassthrough.py  sequencerunnables.py  toolcalling.py
