[project]
name = "generative-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "accelerate>=1.10.1",
    "huggingface-hub>=1.8.0",
    "langchain",
    "langchain-huggingface>=0.3.1",
    "pydantic>=2.7,<3",
    "torch>=2.8.0",
    "transformers>=2.3.0",
]
